# ragtime

./: .env.sample  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  langgraph.json  manage.py  pyproject.toml
.ai-checks/: asgi-wsgi-scott.md  branching-and-pr-strategy.md  comment-discipline.md  entity-creation-race-safety.md  env-var-sync.md  feature-pr-docs.md  gh-api-shell-escaping.md  pipeline-step-sync.md  qdrant-payload-slim.md
.continue/checks/: asgi-wsgi-scott.md  branching-and-pr-strategy.md  comment-discipline.md
.github/: copilot-instructions.md
.github/scripts/: aggregate_ai_checks.py  list_ai_checks.py  preflight_key.py  run_ai_check.py
.github/workflows/: ai-checks.yml  ci.yml
chat/: agent.py  models.py  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py
core/tests/: test_configure.py
doc/: README.md  eval-merge-side.md  eval-violation-gh.md
doc/architecture/: ragtime-processing-pipeline-with-recovery.excalidraw  ragtime-processing-pipeline.excalidraw  ragtime-recovery.excalidraw
doc/features/: 2026-03-09-step-01-submit-episode.md  2026-03-09-step-02-dedup.md  2026-03-09-step-03-scrape.md  2026-03-09-step-04-05-download-resize.md  2026-03-10-ci-github-actions.md  2026-03-11-fix-summarization-language.md  2026-03-11-step-06-transcribe.md  2026-03-11-step-07-summarize.md  2026-03-13-manage-py-configure.md  2026-03-13-refactor-rename-scraping-provider.md  2026-03-13-session-transcript-format.md  2026-03-13-step-08-extract-entities.md  2026-03-13-step-09-resolve-entities.md  2026-03-14-entity-types-to-db.md  (+70 more)
episodes/: admin.py  apps.py  chunker.py  downloader.py  embedder.py  enrichment.py  entity_types.yaml  eval_bare_entity.py  eval_comment.py  eval_fake_env.py  events.py  extractor.py  fetch_details_step.py  initial_entity_types.yaml  languages.py  models.py  musicbrainz.py  observability.py  processing.py  recovery.py  resizer.py  resolver.py  scraper.py  signals.py  summarizer.py  telemetry.py  tests.py  timestamps.py  transcriber.py  urls.py  vector_store.py  views.py  wikidata.py  workflows.py
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
ragtime/: asgi.py  settings.py  test_runner.py  urls.py  wsgi.py
(+330 files in other folders)
