[project]
name = "ragtime"
version = "0.1.0"
description = "Retrieval Augmented Generation (RAG) in the Key of Jazz"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=5.2,<5.3",
    "django-q2>=1.7,<2",
    "openai>=1.0,<2",
    "httpx>=0.27,<1",
    "beautifulsoup4>=4.12,<5",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0.3",
    "mutagen>=1.47,<2",
    "psycopg[binary]>=3.2,<4",
    "opentelemetry-api>=1.29,<2",
    "opentelemetry-sdk>=1.29,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.29,<2",
    "opentelemetry-instrumentation-openai>=0.40",
    "pydantic-ai>=1.30,<2",
    "playwright>=1.40,<2",
]

[project.optional-dependencies]
langfuse = ["langfuse>=4,<5"]
